--- a/backend/package.json
+++ b/backend/package.json
@@ -30,8 +30,8 @@
     }
   },
   "dependencies": {
-    "Express": "^3.0.1",
     "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "mysql2": "^3.2.0"
   }
 }
